--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ rerun.txt
 pickle-email-*.html
 config/initializers/secret_token.rb
 config/secrets.yml
-.gitconfig
+/.gitconfig
 
 ## Environment normalisation:
 /.bundle
