--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,12 +4,14 @@ sonar.projectKey=redmine:gitdownload
 sonar.projectName=gitdownload
 sonar.projectVersion=1.0
 
+sonar.exclusions=assets/javascripts/clipboard.js/*,assets/javascripts/clipboard.js/**/*
+
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # Since SonarQube 4.2, this property is optional if sonar.modules is set.
 # If not set, SonarQube starts looking for source code from the directory containing
 # the sonar-project.properties file.
 sonar.sources=.
-sonar.exclusions=assets/javascripts/clipboard.js/
+
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
